--- a/templates/disk.html
+++ b/templates/disk.html
@@ -3,13 +3,13 @@
                     aria-hidden="true">
                 &times;
             </button>
-            轻量服务器不支持硬盘扩容、新增，您可以选择升级到拥有更大容量的套餐。
+            LXC服务器目前不支持硬盘扩容、新增，您可以选择升级到拥有更大磁盘的套餐。
         </div>
 <div class="row">
     <div class="col-xl-12 col-xs-12">
   <div class="card shadow mb-4">
     <div class="card-header py-3">
-      <h6 class="m-0 font-weight-bold text-primary">磁盘管理</h6>
+      <h6 class="m-0 font-weight-bold text-primary">磁盘详细信息</h6>
     </div>
     <div class="card-body ">
       
