--- a/templates/info.html
+++ b/templates/info.html
@@ -119,32 +119,39 @@
 <!--使用概括结束-->
 
 
-
 <div class="card shadow mb-4">
 <div class="card-header py-3">
-<h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
+<h6 class="m-0 font-weight-bold text-primary">PVE控制台</h6>
 </div>
 <div class="card-body">
-<p>SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce CSS bloat and poor page performance. Custom CSS classes are used to create custom components and custom utility classes.</p>
-<p class="mb-0">Before working with this theme, you should become familiar with the Bootstrap framework, especially the utility classes.</p>
+<p>使用ProxmoxVE控制面板操作您的服务器</p>
+<p class="mb-0">
+    VMID：<a id="vmid" style="
+        display: ;
+    ">{$params['domain']}</a>
+
+    <br>
+
+    用户名：<a id="username_vnc" style="
+        display: ;
+    ">{$params['dedicatedip']}</a>
+
+    <br>
+
+    密码：<a id="password_vnc" style="
+        display: ;
+    ">{$params['password']}</a>
+
+    <br>
+
+    控制面板：<a id="url_vnc" style="
+        display: ;
+    ">{$params['server_http_prefix']}://{$params['server_ip']}:{$params['port']}</a>
+</p>
 </div>
 </div>
 
 
-<a id="vmid" style="
-    display: none;
-">{$params['domain']}</a>
-
-<a id="username_vnc" style="
-    display: ;
-">{$params['dedicatedip']}</a>
-
-<a id="password_vnc" style="
-    display: ;
-">{$params['password']}</a>
-<a id="url_vnc" style="
-    display: ;
-">{$params['server_http_prefix']}://{$params['server_ip']}:{$params['port']}</a>
 <script type="text/javascript" charset="utf-8">
       
     
