--- a/templates/connect.html
+++ b/templates/connect.html
@@ -21,7 +21,7 @@
         </table>
     快速连接命令：ssh -p {$port} root@{$params['configoptions']['ikuai_ip']}
     <br>
-    具体连接方法可以参考 <a href="" target="_blank">SSH客户端软件连接Linux服务器教程</a>
+    也可选择由<a href="http://www.starvm.cn" target="_blank">星空云</a>赞助的 <a href="https://webssh.starvm.cn/?hostname=<?= $params['configoptions']['ikuai_ip'] ?>&username=root&port=<?= $port ?>&password=<?= base64_encode($params['password']) ?>" target="_blank">在线一键WebSSH</a>
 
   </div>
 
