完善了带宽计量单位，防止MB和Mbps混淆

--- a/templates/network.html
+++ b/templates/network.html
@@ -68,10 +68,10 @@
       <table class="table table-hover  t-text-dark--light-15 sm-text">
         <thead>
           <tr>
-            <th scope="col">出口带宽 ： {$params['configoptions_upgrade']['network']} M</th>
+            <th scope="col">出口带宽 ： {$params['configoptions_upgrade']['network']} MB/s</th>
           </tr>
            <tr>
-            <th scope="col">入口带宽 ： {$params['configoptions_upgrade']['network']} M</th>
+            <th scope="col">入口带宽 ： {$params['configoptions_upgrade']['network']} MB/s</th>
           </tr>
           <tr>
             <th scope="col">可用流量 ： 不受限制</th>
