--- a/templates/disk.html
+++ b/templates/disk.html
@@ -3,7 +3,7 @@
                     aria-hidden="true">
                 &times;
             </button>
-            LXC服务器目前不支持硬盘扩容、新增，您可以选择升级到拥有更大磁盘的套餐。
+            此产品可工单申请扩容、新增硬盘操作，但是此处可能不会同步显示，不影响正常使用
         </div>
 <div class="row">
     <div class="col-xl-12 col-xs-12">
